# shot-linter

./: .gitignore  README.md  pyproject.toml
shot_linter/: main.py
uda_linter/: main.py
