[project]
name = "shot-linter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sal-xarray>=0.2.2",
    "uda-xarray>=0.2.3",
    "xinter",
]

[tool.uv.sources]
xinter = { git = "https://github.com/samueljackson92/xinter.git" }
